--- a/video-streaming/Dockerfile
+++ b/video-streaming/Dockerfile
@@ -1,13 +1,8 @@
 FROM node:16.13.0-alpine
 
 WORKDIR /usr/src/app
-
 COPY package*.json ./
-
+COPY .env ./
 RUN npm install 
-
 COPY ./src ./src
-
-COPY ./videos ./videos
-
 CMD npm run start
