--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "export PORT=80 && node ./src/index.js",
+    "start": "node ./src/index.js",
     "dev": "nodemone ./src/index.js"
   },
   "keywords": [],
