--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.7'
 services:
+  db:
+    image: mongo:5.0.7
+    container_name: db
+    ports:
+      - '4002:27017'
+    restart: 'always'
+
   s3-storage:
     image: s3-storage
     build:
@@ -7,8 +14,9 @@ services:
       dockerfile: Dockerfile
     container_name: video-storage
     ports:
-      - '80:80'
+      - '4000:80'
     restart: 'no'
+
   video-streaming:
     image: video-streaming
     build:
@@ -19,4 +27,5 @@ services:
       - '4001:80'
     environment:
       - VIDEO_STORAGE_HOST=video-storage
+      - DB_HOST=mongodb://db:27017
     restart: 'no'
