--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "aws-sdk": "^2.1120.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongodb": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
