--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,24 @@
 version: '3.7'
 services:
-  db:
-    image: mongo:5.0.7
-    container_name: db
-    ports:
-      - '4002:27017'
-    restart: 'always'
-
-  s3-storage:
-    image: s3-storage
-    build:
-      context: ./s3-storage
-      dockerfile: Dockerfile
-    container_name: video-storage
-    ports:
-      - '4000:80'
-    restart: 'no'
-
   video-streaming:
     image: video-streaming
     build:
       context: ./video-streaming
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-dev
     container_name: video-streaming
+    volumes:
+      - ./video-streaming/src:/usr/src/app/src
+    ports:
+      - '4000:80'
+    restart: 'no'
+  history:
+    image: history
+    build:
+      context: ./history
+      dockerfile: Dockerfile-dev
+    volumes:
+      - ./history/src:/usr/src/app/src
+    container_name: history
     ports:
       - '4001:80'
-    environment:
-      - VIDEO_STORAGE_HOST=video-storage
-      - DB_HOST=mongodb://db:27017
     restart: 'no'
