--- a/history/package.json
+++ b/history/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "s3-storage",
+  "name": "history",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1120.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
   }
 }
