--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.7'
 services:
+  db:
+    image: mongo:5.0.7
+    container_name: db
+    ports:
+      - '4002:27017'
+    restart: always
+
   video-streaming:
     image: video-streaming
     build:
@@ -11,6 +18,7 @@ services:
     ports:
       - '4000:80'
     restart: 'no'
+
   history:
     image: history
     build:
