--- a/history/package.json
+++ b/history/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
