--- a/history/Dockerfile-dev
+++ b/history/Dockerfile-dev
@@ -3,5 +3,5 @@ FROM node:16.13.0-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY .env ./
-CMD npm install && \
+CMD npm install -D && \
     npm run dev
