--- a/history/package.json
+++ b/history/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mongodb": "^4.5.0"
