--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "aws-sdk": "^2.1120.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
