--- a/recommendations/Dockerfile-prod
+++ b/recommendations/Dockerfile-prod
@@ -3,6 +3,5 @@ FROM node:16.13.0-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY .env ./
-CMD npm install -D && \
-    npx wait-port rabbitmq:5672 && \
-    npm run dev
+RUN npm install 
+CMD npm run start
