--- a/recommendations/package.json
+++ b/recommendations/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "history",
+  "name": "recommendations",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node ./src/indx.js",
     "dev": "nodemon ./src/index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
