--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^4.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "wait-port": "^0.2.9"
   }
 }
